<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_consulta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultaFragment">

    <EditText
        android:id="@+id/etNumeroCons"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:hint="@string/numero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarCons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarCons"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="31dp"
        android:text="@string/buscar"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNumeroCons"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etEspecCons"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/especialidade"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataCons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarCons"
        app:layout_constraintVertical_bias="0.486" />

    <EditText
        android:id="@+id/etDataCons"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/data_consulta"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/spMedicoCons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spMedicoCons"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <Button
        android:id="@+id/btnAgendarCons"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="37dp"
        android:text="@string/agendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMedicoCons" />

    <Button
        android:id="@+id/btnModificarCons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="32dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMedicoCons" />

    <Button
        android:id="@+id/btnListarCons"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="29dp"
        android:text="@string/listar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgendarCons" />

    <Button
        android:id="@+id/btnExcluirCons"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/excluir"
        app:layout_constraintBottom_toTopOf="@+id/tvListarCons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarCons" />

    <TextView
        android:id="@+id/tvListarCons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarCons" />

    <TextView
        android:id="@+id/tvTituloCons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="27dp"
        android:text="@string/consulta"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/etNumeroCons"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>